infra/argocd/resources/argocd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    owner: "pipeline"
  name: argocd
