infra/argocd/resources/argocd-server-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-server
spec:
  gateways:
  - argocd-gateway
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 80
